--- a/frontend/src/custom.css
+++ b/frontend/src/custom.css
@@ -1,6 +1,68 @@
+/* custom.css */
+
+/* Styles for the main container */
 .main_container {
-    margin:4.2rem;
-}
-.main_header h1 {
+    max-width: 1550px; /* Limit the width of the container */
+    margin: 0 auto; /* Center the container horizontally */
+  }
+  
+  /* Styles for the main header */
+  .main_header {
+    padding: 20px; /* Add some padding to the header */
+    background-color: #ffffff; /* Set a background color */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  }
+  
+  /* Styles for the main content container */
+  .m_content_container {
+    margin-top: 40px; /* Add some space between the header and content */
+  }
+  
+  /* Styles for the main content */
+  .m_content {
+    flex: 1; /* Allow the content to grow and take remaining space */
+    padding: 20px; /* Add some padding */
+  }
+  
+  /* Styles for the main content header */
+  .m_header {
+    margin-bottom: 20px; /* Add some space below the header */
+  }
+  
+  /* Styles for the main content paragraph */
+  .m_para {
+    margin-bottom: 20px; /* Add some space below the paragraph */
+  }
+  
+  /* Styles for the "Get Started" button */
+  .m_content button {
+    padding: 10px 20px; /* Add padding */
+    background-color: #FF4F5A; /* Set background color */
+    color: #ffffff; /* Set text color */
+    border: none; /* Remove border */
+    border-radius: 5px; /* Add border radius */
+    cursor: pointer; /* Change cursor to pointer on hover */
+  }
+  .m_content {
+    padding: 20px; /* Add some padding */
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+    border-radius: 5px; /* Add border radius */
+    text-align: center; /* Center the text horizontally */
+    display: flex;
+    flex-direction: column;
     align-items: center;
-}
+    justify-content: center;
+  }
+  
+  /* Styles for the image container */
+  .m_img {
+    flex: 1; /* Allow the image container to grow and take remaining space */
+  }
+  
+  /* Styles for the image */
+  .m_img img {
+    width: 100%; /* Make the image responsive and fill its container */
+    border-radius: 5px; /* Add border radius for a rounded look */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  }
+  
