worked in singup page ui

--- a/frontend/src/custom.css
+++ b/frontend/src/custom.css
@@ -150,7 +150,7 @@
  /*                                          singin page                                        */
 
  
-.sigin_img {
+.form_img {
   height:75vh;
 }
 .shadow_md {
